--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.9.7",
-    "samp-query": "^1.0.0"
+    "gamedig": "^4.0.0"
   }
 }
