--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "gamedig": "^4.0.0"
+  "cors": "^2.8.5",
+  "dotenv": "^16.3.1",
+  "express": "^4.18.2",
+  "gamedig": "^5.0.0",
+  "mysql2": "^3.9.7"
   }
 }
+ 
